# EQ-Gateway

./: .gitignore  ARCHITECTURE-DIAGRAM.md  Cargo.toml  DEMO-SCRIPT.md  LICENSE  PORTFOLIO-CASE-STUDY.md  README.md  SPRINT-2-FINAL-REPORT.md
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/eqgateway/: MainActivity.kt  Navigation.kt  NavigationKeys.kt
android/app/src/main/java/com/example/eqgateway/data/: ChatRepository.kt  DataRepository.kt
android/app/src/main/java/com/example/eqgateway/model/: EqState.kt
android/app/src/main/java/com/example/eqgateway/theme/: Color.kt  Theme.kt  (+1 more)
android/app/src/main/java/uniffi/eq_ffi/: eq_ffi.kt
android/app/src/main/res/values/: strings.xml  themes.xml
crates/eq-engine-core/: Cargo.toml
crates/eq-engine-core/src/: lib.rs  slm_adapter.rs
crates/eq-engine-core/tests/: inference_benchmark.rs  live_backend_test.rs
crates/eq-ffi/: Cargo.toml  build.rs
crates/eq-ffi/src/: eq_ffi.udl  lib.rs
crates/eq-memory/: Cargo.toml
crates/eq-memory/src/: lib.rs
crates/eq-privacy-filter/: Cargo.toml
crates/eq-privacy-filter/src/: lib.rs
crates/eq-state-compiler/: Cargo.toml
crates/eq-state-compiler/src/: lib.rs
docs/: DEVELOPMENT_WORKFLOW.md  Design_Document_v0.2.md  EQ_State_Schema.md  Evaluation_Harness.md  Evaluation_Harness_Python.md  Implementation_Roadmap.md  KMP_Librarian_Architecture.md  MCP_Data_Flow.md  Market_Research_v0.1.md  Model_Selection_Report.md  PRD_v0.2.md  Pitch_and_Positioning.md  Rust_Engine_Architecture.md  Sprint_1_Plan.md  Sprint_2_Plan.md
docs/schemas/: eq-state.schema.ts  mcp-tools.schema.ts
evaluation/: pyproject.toml  requirements.txt
evaluation/fixtures/: invalid_bad_values.json  invalid_missing_field.json  sample_eq_state.json
evaluation/schema/: eq_state_schema.json
evaluation/src/eq_gateway_eval/: __init__.py  validator.py
evaluation/tests/: test_validator.py
services/agent-gateway/: .gitignore  pyproject.toml  requirements.txt
services/agent-gateway/demo/: demo.py
services/agent-gateway/src/agent_gateway/: __init__.py  config.py  eq_client.py  hitl_gate.py  main.py  models.py  receipt.py  router.py
services/agent-gateway/tests/: test_eq_client.py  test_hitl_gate.py  test_receipt.py  test_router.py
services/mcp-bridge/: pyproject.toml  requirements.txt
services/mcp-bridge/src/mcp_bridge/: server.py
services/mcp-bridge/tests/: test_mcp_server.py
(+9 files in other folders)
